--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -81,6 +81,7 @@
 @import 'blocks/warning';
 @import 'blocks/attention';
 @import 'blocks/steps-list';
+@import 'blocks/last-comment';
 
 // main page
 @import "blocks/news-notice";
