--- a/source/sass/blocks/unavailable.scss
+++ b/source/sass/blocks/unavailable.scss
@@ -47,6 +47,7 @@
   margin-bottom: 24px;
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 120px;
     padding: 16px 26px;
     width: 236px;
   }
