--- a/source/sass/blocks/improvement-fork-1.scss
+++ b/source/sass/blocks/improvement-fork-1.scss
@@ -1,101 +1,101 @@
-.improvement-fork {
-    padding: 40px 0;
-    padding-bottom: 120px;
-}
+// .improvement-fork {
+//     padding: 40px 0;
+//     padding-bottom: 120px;
+// }
 
-.improvement-fork__title {
-    margin-bottom: 40px;
-    max-width: 1120px;
-}
+// .improvement-fork__title {
+//     margin-bottom: 40px;
+//     max-width: 1120px;
+// }
 
-.improvement-fork__content {
-    max-width: 740px;
+// .improvement-fork__content {
+//     max-width: 740px;
 
-    p {
-        font-size: rem(15px);
-        line-height: rem(27px);
-    }
-}
+//     p {
+//         font-size: rem(15px);
+//         line-height: rem(27px);
+//     }
+// }
 
-.improvement-fork__status-container {
-    margin-bottom: 35px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-}
+// .improvement-fork__status-container {
+//     margin-bottom: 35px;
+//     display: flex;
+//     flex-flow: row wrap;
+//     justify-content: flex-start;
+// }
 
-.improvement-fork__btn {
-    margin-top: 33px;
-    width: 100%;
-    height: 69px;
-    padding-left: 24px;
-    padding-top: 24px;
-    text-align: start;
-}
+// .improvement-fork__btn {
+//     margin-top: 33px;
+//     width: 100%;
+//     height: 69px;
+//     padding-left: 24px;
+//     padding-top: 24px;
+//     text-align: start;
+// }
 
-.improvement-fork__back {
-    margin-left: 2px;
-}
+// .improvement-fork__back {
+//     margin-left: 2px;
+// }
 
-@include tablet {
-    .improvement-fork {
-        padding-bottom: 105px;
-    }
+// @include tablet {
+//     .improvement-fork {
+//         padding-bottom: 105px;
+//     }
 
-    .improvement-fork__title {
-        margin-bottom: 39px;
-        font-size: rem(30px);
-        line-height: rem(35.55px);
-    }
+//     .improvement-fork__title {
+//         margin-bottom: 39px;
+//         font-size: rem(30px);
+//         line-height: rem(35.55px);
+//     }
 
-    .improvement-fork__back {
-        margin-bottom: 40px;
-    }
-}
+//     .improvement-fork__back {
+//         margin-bottom: 40px;
+//     }
+// }
 
-@include mobile {
-    .improvement-fork {
-        padding: 27px 0;
-        padding-bottom: 70px;
-    }
+// @include mobile {
+//     .improvement-fork {
+//         padding: 27px 0;
+//         padding-bottom: 70px;
+//     }
 
-    .improvement-fork__title {
-        margin-bottom: 32px;
-        font-size: rem(24px);
-        line-height: rem(28.44px);
-    }
+//     .improvement-fork__title {
+//         margin-bottom: 32px;
+//         font-size: rem(24px);
+//         line-height: rem(28.44px);
+//     }
 
-    .improvement-fork__back {
-        margin-bottom: 30px;
-    }
+//     .improvement-fork__back {
+//         margin-bottom: 30px;
+//     }
 
-    .improvement-fork__status-container {
-        margin-bottom: 32px;
-    }
+//     .improvement-fork__status-container {
+//         margin-bottom: 32px;
+//     }
 
-    .improvement-fork__content {
-        p {
-            margin-top: 7px;
-        }
-    }
+//     .improvement-fork__content {
+//         p {
+//             margin-top: 7px;
+//         }
+//     }
 
-    .improvement-fork__btn {
-        margin-top: 28px;
-        height: 59px;
-        text-align: center;
-        padding: 19px 5px;
+//     .improvement-fork__btn {
+//         margin-top: 28px;
+//         height: 59px;
+//         text-align: center;
+//         padding: 19px 5px;
 
-        svg {
-            display: none;
-        }
+//         svg {
+//             display: none;
+//         }
 
-        span {
-            padding: 0;
-        }
-    }
+//         span {
+//             padding: 0;
+//         }
+//     }
 
-    .improvement-fork__back {
-        margin-left: 4px;
-        margin-bottom: 28px;
-    }
-}
+//     .improvement-fork__back {
+//         margin-left: 4px;
+//         margin-bottom: 28px;
+//     }
+// }
