--- a/source/sass/blocks/project-status.scss
+++ b/source/sass/blocks/project-status.scss
@@ -6,7 +6,7 @@
   font-size: rem(14px);
   line-height: 130%;
 
-  color: var(--color-text, $grey-default);
+  @include status-colors;
 
   &::before {
     content: "";
@@ -23,21 +23,5 @@
     border-radius: 50%;
 
     transform: translateY(-50%);
-  }
-
-  &--orange {
-    color: var(--color-text, $orange);
-  }
-
-  &--blue {
-    color: var(--color-text, $blue-default);
-  }
-
-  &--green {
-    color: var(--color-text, $green);
-  }
-
-  &--red {
-    color: var(--color-text, $red);
   }
 }
