--- a/source/sass/blocks/area-improvement.scss
+++ b/source/sass/blocks/area-improvement.scss
@@ -1,116 +1,3 @@
-// .area-improvement {
-//   padding-top: 40px;
-//   padding-bottom: 80px;
-
-//   @media (max-width: $desktop-width - 1) {
-//     padding-bottom: 87px;
-//   }
-
-//   @media (max-width: $tablet-width - 1) {
-//     padding-top: 27px;
-//     padding-bottom: 64px;
-//   }
-// }
-
-// .area-improvement__back-btn {
-//   margin-left: 2px;
-
-//   @media (max-width: $desktop-width - 1) {
-//     margin-bottom: 38px;
-//   }
-
-//   @media (max-width: $tablet-width - 1) {
-//     margin-left: 4px;
-//     margin-bottom: 28px;
-//   }
-// }
-
-// .area-improvement__title {
-//   margin-bottom: 40px;
-//   max-width: 1120px;
-
-//   @media (max-width: $desktop-width - 1) {
-//     font-size: rem(30px);
-//     line-height: rem(36px);
-//   }
-
-//   @media (max-width: $tablet-width - 1) {
-//     margin-bottom: 32px;
-
-//     font-size: rem(24px);
-//     line-height: rem(28px);
-//   }
-// }
-
-// .area-improvement__stage-wrapper {
-//   display: flex;
-//   flex-flow: row wrap;
-//   justify-content: flex-start;
-
-//   margin-bottom: 35px;
-
-//   @media (max-width: $tablet-width - 1) {
-//     margin-bottom: 32px;
-//   }
-// }
-
-// .area-improvement__text {
-//   font-size: rem(15px);
-//   line-height: 180%;
-//   max-width: 740px;
-
-//   @media (min-width: $desktop-width) {
-//     margin-bottom: 38px;
-//   }
-
-//   @media (max-width: $desktop-width - 1) {
-//     margin-bottom: 39px;
-//   }
-// }
-
-// .area-improvement--list {
-
-//   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
-//    padding-bottom: 105px;
-//   }
-
-//   .area-improvement__back-btn {
-
-//     @media (max-width: $desktop-width - 1) {}
-
-//     @media (max-width: $tablet-width - 1) {
-//       margin-bottom: 24px;
-//     }
-//   }
-
-//   .area-improvement__info {
-//     margin-bottom: 38px;
-
-//     @media (max-width: $desktop-width - 1) {
-//       margin-bottom: 39px;
-//     }
-//   }
-
-//   .area-improvement__text {
-//     @media (max-width: $tablet-width - 1) {
-//       margin-bottom: 24px;
-//     }
-//   }
-
-//   .area-improvement__proposal-list li {
-//     border-top: none;
-//   }
-
-//   .area-improvement__paginator {
-//     margin-top: 40px;
-
-//     @media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
-//       margin-top: 56px;
-//     }
-//   }
-// }
-
-
 .area-improvement {
   padding: 24px 0 56px;
 
@@ -144,8 +31,7 @@
 }
 
 .area-improvement__proposal {
-  padding: 0;
-  margin: 0 0 40px;
+  margin-bottom: 40px;
 
   &:last-child {
     margin-bottom: 0;
