--- a/source/sass/blocks/proposal-winners.scss
+++ b/source/sass/blocks/proposal-winners.scss
@@ -12,8 +12,7 @@
 }
 
 .proposal-winners__proposal {
-  padding: 0;
-  margin: 0 0 31px;
+  margin-bottom: 31px;
 }
 
 .proposal-winners__paginator {
