--- a/source/sass/blocks/rating-main.scss
+++ b/source/sass/blocks/rating-main.scss
@@ -3,40 +3,21 @@
     margin-bottom: 40px;
   }
 
-  &--vote {
-    .rating-main__state-info {
-      margin-bottom: 25px;
-    }
-
-    .rating-main__description {
-      max-width: 65%;
-      margin-bottom: 50px;
-    }
-  }
-
   @media(max-width: $tablet-width) {
     .page-content__title {
       font-size: 30px;
       line-height: 36px;
+      margin-bottom: 39px;
     }
 
-    &--vote {
-      .rating-main__state-info {
-        margin-bottom: 12px;
-      }
-
-      .rating-main__state-info-wrap {
-        margin-bottom: 27px;
-      }
-
-      .rating-main__description {
-        max-width: 100%;
-      }
+    .status-info {
+      padding: 25px 28px 23px;
     }
   }
 
   @media(max-width: $mobile-max-width) {
     .page-content__title {
+      margin-bottom: 32px;
       font-size: 24px;
       line-height: 28px;
     }
@@ -52,6 +33,7 @@
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin-bottom: 40px;
 
   .rating-main__name {
     font-family: inherit;
@@ -67,6 +49,7 @@
     }
 
     @media (max-width: $tablet-width) {
+      margin-bottom: 32px;
       font-size: 15px;
 
       &--status {
@@ -76,26 +59,25 @@
     }
 
     @media(max-width: $mobile-max-width) {
+      margin-bottom: 6px;
+      margin-right: 3px;
       font-size: 13px;
+      flex-shrink: 0;
 
       &--status {
-        margin-right: 25px;
+        margin-right: 18px;
+        font-size: 15px;
       }
     }
   }
 
-  @media (max-width: $tablet-width) {
-    margin-bottom: 32px;
-  }
-
   @media(max-width: $mobile-max-width) {
-    margin-bottom: 29px;
+    margin-bottom: 24px;
   }
 }
 
 .rating-main__state-info {
   margin-right: 32px;
-  margin-bottom: 40px;
 
   &:last-child {
     margin-right: 0;
@@ -126,15 +108,18 @@
 }
 
 .rating-main__description {
+  padding-bottom: 30px;
+  max-width: 65%;
   font-size: 15px;
   line-height: 27px;
 
   @media(max-width: $tablet-width) {
-    margin-bottom: 48px;
+    max-width: 100%;
   }
 
   @media(max-width: $mobile-max-width) {
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
+    padding-bottom: 23px;
   }
 }
 
@@ -171,7 +156,7 @@
 
 .rating-main__categories {
   padding-top: 23px;
-  padding-bottom: 43px;
+  padding-bottom: 40px;
 
   border-top: 1px solid var(--color-stroke, $light-grey);
   border-bottom: 1px solid var(--color-stroke, $light-grey);
@@ -188,18 +173,13 @@
   @media(max-width: $mobile-max-width) {
     padding-top: 20px;
 
-    .rating-main__name,
-    .rating-main__count-wrap {
-      padding-top: 34px;
-    }
-
-    .rating-main__count-wrap {
-      padding-right: 0;
+    .rating-main__name {
+      padding-top: 32px;
     }
   }
 }
 
-.rating-main__title {
+.rating-main__headline {
   margin-bottom: 8px;
   padding-left: 0;
 
@@ -238,13 +218,17 @@
   }
 
   @media(max-width: $tablet-width) {
-    margin-bottom: 55px;
+    margin-bottom: 16px;
+
+    &--vote {
+      margin-bottom: 49px;
+    }
   }
 }
 
 .rating-main__categories-info {
   padding: 15px 20px;
-  margin-bottom: 32px;
+  margin-bottom: 30px;
   background-color: $color-bg;
   border: 1px solid $light-grey;
   box-sizing: border-box;
@@ -252,6 +236,7 @@
 
   @media(max-width: $tablet-width) {
     padding: 17px 14px;
+    // margin-bottom: 10px;
 
     .link--underline::before {
       bottom: 0;
@@ -267,105 +252,33 @@
 .rating-main__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
 
   list-style: none;
   text-align: left;
-
-  &--vote {
-    justify-content: flex-start;
-
-    li {
-      max-width: calc(100% / 3 - 8px);
-      margin-right: 8px;
-
-      &:nth-child(3n+3) {
-        margin-right: 0;
-      }
-    }
-
-    .rating-main__item:hover {
-      .rating-main__count-wrap {
-        opacity: 1;
-      }
-    }
-
-    .rating-main__name {
-      padding-left: 13px;
-      font-size: 15px;
-      flex-wrap: wrap;
-    }
-
-    .rating-main__link {
-      padding: 20px 10px 10px 15px;
-    }
   }
-
-  @media (max-width: $tablet-width) {
-    li {
-      max-width: calc(100% / 2 - 8px);
-    }
-
-    .rating-main__link {
-      padding: 29px 10px 6px 46px;
-    }
-
-    .rating-main__icon {
-      top: 30px;
-      left: 16px;
-    }
-
-    .rating-main__count-wrap {
-      padding-right: 7px;
-    }
-
-    .rating-main__categories {
-      margin-bottom: 33px;
-    }
-  }
-
-  @media (max-width: $mobile-width) {
-    li {
-      max-width: 100%;
-      margin-right: 0;
-    }
-  }
-}
-
-.rating-main__button-all {
-  display: none;
-
-  @media (max-width: $desktop-width) {
-    display: flex;
-  }
-}
 
 .rating-main__item {
   flex-shrink: 0;
   width: calc(50% - 4px);
   margin-bottom: 8px;
+  margin-right: 8px;
+
+  &:nth-child(2n + 2) {
+    margin-right: 0;
+  }
 
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: $border-radius;
 
   transition: box-shadow $style-change-duration linear;
 
-  @media (max-width: $desktop-width - 81) {
-    width: 100%;
-  }
-
-  @media (max-width: $tablet-width - 1) {
-    &.js_hide {
-      display: none;
-    }
-  }
-
   &:hover {
     box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
 
-    .rating-main__name {
+    .rating-main__title {
       color: var(--color-interactive-default, $blue-default);
     }
 
@@ -375,6 +288,39 @@
 
     .rating-main__hover-text {
       opacity: 1;
+    }
+  }
+
+  &--is-done,
+  &--is-done:hover {
+    .rating-main__count-wrap {
+      opacity: 0;
+    }
+
+    .rating-main__hover-text {
+      opacity: 1;
+      color: $grey-lighter;
+    }
+  }
+
+  @media (max-width: $desktop-width - 81) {
+    width: 100%;
+  }
+
+  @media (max-width: $tablet-width - 1) {
+    &.js_hide {
+      display: none;
+    }
+
+    &--is-done {
+      .rating-main__link {
+        padding-bottom: 16px;
+      }
+
+      .rating-main__hover-text {
+        position: static;
+        margin-top: 14px;
+      }
     }
   }
 }
@@ -392,8 +338,7 @@
   }
 
   @media(max-width: $mobile-max-width) {
-    top: 20px;
-    left: 16px;
+    position: static;
   }
 }
 
@@ -411,9 +356,17 @@
 
     padding: 24px 16px 23px 16px;
   }
+
+  @media (max-width: $mobile-max-width) {
+    padding-top: 23px;
+    padding-bottom: 23px;
+    padding-right: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
-.rating-main__name {
+.rating-main__title {
   position: relative;
 
   margin: 0 auto 0 0;
@@ -430,9 +383,10 @@
   }
 
   @media(max-width: $mobile-max-width) {
-    flex-shrink: 0;
+    max-width: 70%;
     margin-right: 3px;
     padding: 7px 0 0 0;
+    flex-shrink: 0;
   }
 }
 
@@ -453,6 +407,13 @@
 
   @media (max-width: $tablet-width - 1) {
     padding-right: 38px;
+  }
+
+  @media (max-width:$mobile-max-width ) {
+    position: absolute;
+    top: 54%;
+    right: 20px;
+    padding: 0;
   }
 }
 
@@ -536,38 +497,42 @@
   color: $blue-default;
   opacity: 0;
   transition: opacity $style-change-duration;
+}
 
-  &--is-done {
-    color: $grey-lighter;
+.rating-main__button-all {
+  display: none;
+
+  @media (max-width: $desktop-width) {
+    display: flex;
   }
 }
 
 .rating-main__your-projects {
   padding-top: 23px;
 
-  .rating-main__title {
+  .rating-main__headline {
     margin-bottom: 15px;
   }
 
   @media(max-width: $tablet-width) {
-    .rating-main__title {
+    .rating-main__headline {
       margin-top: 30px;
       margin-bottom: 17px;
     }
 
     .rating-main__categories-info {
-      margin-bottom: 35px;
+      margin-bottom: 10px;
     }
   }
 
   @media(max-width: $mobile-max-width) {
-    .rating-main__title {
+    .rating-main__headline {
       margin-top: 18px;
       margin-bottom: 7px;
     }
 
     .rating-main__categories-info {
-      margin-bottom: 28px;
+      margin-bottom: 0;
     }
   }
 }
