--- a/source/sass/blocks/rating.scss
+++ b/source/sass/blocks/rating.scss
@@ -1,7 +1,7 @@
 .rating {
   padding: 79px 24px 24px;
 
-  @media (min-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     padding: 64px 16px 7px;
 
     .container {
@@ -9,13 +9,9 @@
     }
   }
 
-  @media (min-width: $tablet-width) {
-    padding-bottom: 26px;
+  @media (max-width: $tablet-width) {
+    padding-bottom: 64px;
     padding-top: 64px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-bottom: 95px;
   }
 }
 
