--- a/source/sass/blocks/project-page.scss
+++ b/source/sass/blocks/project-page.scss
@@ -19,6 +19,17 @@
   color: var(--color-text, $grey);
 }
 
+.project-page__budget-all .project-page__budget-value {
+  margin-bottom: 17px;
+}
+
+.project-page__budget-co-financing .project-page__budget-value {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28px;
+  color: $grey;
+}
+
 .project-page__budget-value {
   display: block;
   margin-top: 8px;
@@ -36,12 +47,96 @@
   margin-bottom: 40px;
 }
 
+.project-page--single-page-rating .project-page__text {
+  margin-bottom: 50px;
+}
+
 .project-page__text-btn {
   display: none;
 }
 
+.project-page__contacts {
+  padding: 23px 25px;
+  border-top: 1px solid $light-grey;
+}
+
+.project-page__contacts-title {
+  margin: 0;
+  margin-bottom: 16px;
+  padding: 0;
+
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 400;
+  letter-spacing: 0;
+  color: $dark-text;
+}
+
+.project-page__contacts-info {
+  margin: 0;
+  margin-top: 3px;
+  padding: 0;
+}
+
+.project-page__contacts-item {
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.project-page__contacts-label,
+.project-page__contacts-info {
+  font-size: 13px;
+  line-height: 17px;
+  font-weight: 400;
+  letter-spacing: 0;
+  color: $grey-lighter;
+}
+
+.project-page__contacts-name {
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  padding: 0;
+  text-decoration: none;
+
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  letter-spacing: 0;
+  color: $dark-text;
+}
+
+.project-page__result {
+  padding: 24px;
+  border-top: 1px solid $light-grey;
+}
+
+.project-page__result-button-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.project-page__result-info {
+  font-size: 13px;
+  line-height: 17px;
+  font-weight: 400;
+  letter-spacing: 0;
+  color: $grey-lighter;
+}
+
 .project-page__gallery {
   margin-bottom: 48px;
+}
+
+.project-page--single-page-rating .project-page__gallery {
+  padding-bottom: 48px;
+  border-bottom: 1px solid $light-grey;
 }
 
 .project-page__examination-date {
@@ -96,6 +191,13 @@
   }
 }
 
+.project-page--single-page-rating .project-page__back-btn {
+  width: auto;
+  padding-left: 45px;
+  padding-right: 45px;
+  margin-top: 0;
+  font-size: 15px;
+}
 
 @include desktop-only {
   .project-page__container {
@@ -133,6 +235,25 @@
     margin-bottom: 16px;
   }
 
+  .project-page--single-page-rating .project-meta {
+    margin-bottom: 39px;
+  }
+
+  .project-page--single-page-rating .project-meta__category {
+    font-size: 18px;
+    padding-left: 21px;
+    padding-bottom: 15px;
+  }
+
+  .project-page--single-page-rating .project-meta__category-link {
+    margin-top: 0;
+    margin-left: 14px;
+  }
+
+  .project-page--single-page-rating .project-meta__category-link svg {
+    display: block;
+  }
+
   .project-page__panel {
     margin-bottom: 56px;
   }
@@ -142,10 +263,165 @@
     margin-right: 0;
     margin-left: 0;
   }
+
+  .project-page--single-page-rating .project-page__panel {
+    margin-bottom: 43px;
+  }
+
+  .project-page--single-page-rating .project-page__budget {
+    padding-right: 40px;
+    padding-bottom: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .project-page--single-page-rating .project-page__result {
+    padding-bottom: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .project-page--single-page-rating .project-page__result-info {
+    margin-left: 15px;
+  }
+
+  .project-page--single-page-rating .project-page__address {
+    padding-left: 16px;
+  }
+
+  .project-page--single-page-rating .project-page__files {
+    width: 100%;
+    column-count: 2;
+    padding: 0 15px;
+    margin: 0;
+    column-gap: 12px;
+    break-inside: avoid-column;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .project-page--single-page-rating .file-item {
+    max-width: calc(100% / 2 - 15px);
+    width: 100%;
+  }
+
+  .project-page--single-page-rating .file-item:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .project-page--single-page-rating .project-page__back-btn {
+    margin-left: 15px;
+    max-width: 280px;
+  }
+
+  .project-page--single-page-rating .project-page__mobile-hidden {
+    display: block;
+  }
 }
 
 
 @include mobile {
+  .project-page--single-page-rating {
+    padding-top: 42px;
+  }
+
+  .project-page--single-page-rating .info-banner {
+    padding: 21px 40px 10px 31px;
+    margin-bottom: 33px;
+
+    svg {
+      top: 22px;
+      left: 22px;
+    }
+  }
+
+  .project-page--single-page-rating .info-banner__title {
+    margin-bottom: 0;
+    line-height: 23px;
+  }
+
+  .project-page--single-page-rating .info-banner__text {
+    padding-left: 32px;
+    font-size: 15px;
+    line-height: 20px;
+  }
+
+  .project-page--single-page-rating .content h1:not([class]) {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .project-page--single-page-rating .project-meta {
+    margin-bottom: 17px;
+  }
+
+  .project-page--single-page-rating .project-meta__category {
+    padding-left: 15px;
+    font-size: 16px;
+  }
+
+  .project-page--single-page-rating .project-meta__category-link {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .project-page--single-page-rating .project-meta__category-link svg {
+    display: none;
+  }
+
+  .project-page--single-page-rating .project-page__budget {
+    padding-top: 21px;
+    padding-left: 16px;
+    padding-bottom: 19px;
+  }
+
+  .project-page--single-page-rating .project-page__contacts {
+    padding-top: 21px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 18px;
+  }
+
+  .project-page--single-page-rating .project-page__result {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 21px;
+  }
+
+  .project-page--single-page-rating .project-page__result-button-wrap {
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 3px;
+  }
+
+  .project-page--single-page-rating .button-like--bordered {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    margin-bottom: 8px;
+  }
+
+  .project-page--single-page-rating .project-page__result-info {
+    margin-left: 0;
+  }
+
+  .project-page--single-page-rating .content h2:not([class]) {
+    font-size: 24px;
+  }
+
+  .project-page--single-page-rating .file-item {
+    max-width: 100%;
+  }
+
+  .project-page--single-page-rating .project-page__back-btn {
+    max-width: 290px;
+    margin: 0 auto;
+  }
+
   .project-page__meta,
   .project-page__panel,
   .project-page__text,
@@ -257,5 +533,21 @@
   .project-page__survey-btn,
   .project-page__back-btn {
     display: none;
+  }
+}
+
+.project-page__address {
+  margin-top: -13px;
+  margin-bottom: 48px;
+
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  letter-spacing: 0;
+  color: $dark-text;
+
+  svg {
+    fill: $grey;
   }
 }
