--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -74,6 +74,12 @@
   }
 }
 
+@mixin mobile-max {
+  @media (max-width: $mobile-max-width - 1) {
+    @content;
+  }
+}
+
 @mixin retina {
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     @content;
