--- a/source/sass/blocks/project-page.scss
+++ b/source/sass/blocks/project-page.scss
@@ -27,7 +27,7 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 28px;
-  color: $grey;
+  color: var(--color-text, $grey);
 }
 
 .project-page__budget-value {
@@ -45,10 +45,6 @@
 
 .project-page__text {
   margin-bottom: 40px;
-}
-
-.project-page--single-page-rating .project-page__text {
-  margin-bottom: 50px;
 }
 
 .project-page__text-btn {
@@ -70,7 +66,7 @@
   line-height: 23px;
   font-weight: 400;
   letter-spacing: 0;
-  color: $dark-text;
+  color: var(--color-text, $dark-text);
 }
 
 .project-page__contacts-info {
@@ -93,7 +89,7 @@
   line-height: 17px;
   font-weight: 400;
   letter-spacing: 0;
-  color: $grey-lighter;
+  color: var(--color-text, $grey-lighter);
 }
 
 .project-page__contacts-name {
@@ -107,7 +103,7 @@
   line-height: 22px;
   font-weight: 400;
   letter-spacing: 0;
-  color: $dark-text;
+  color: var(--color-text,  $dark-text);
 }
 
 .project-page__result {
@@ -127,16 +123,11 @@
   line-height: 17px;
   font-weight: 400;
   letter-spacing: 0;
-  color: $grey-lighter;
+  color: var(--color-text,  $grey-lighter);
 }
 
 .project-page__gallery {
   margin-bottom: 48px;
-}
-
-.project-page--single-page-rating .project-page__gallery {
-  padding-bottom: 48px;
-  border-bottom: 1px solid $light-grey;
 }
 
 .project-page__examination-date {
@@ -235,25 +226,6 @@
     margin-bottom: 16px;
   }
 
-  .project-page--single-page-rating .project-meta {
-    margin-bottom: 39px;
-  }
-
-  .project-page--single-page-rating .project-meta__category {
-    font-size: 18px;
-    padding-left: 21px;
-    padding-bottom: 15px;
-  }
-
-  .project-page--single-page-rating .project-meta__category-link {
-    margin-top: 0;
-    margin-left: 14px;
-  }
-
-  .project-page--single-page-rating .project-meta__category-link svg {
-    display: block;
-  }
-
   .project-page__panel {
     margin-bottom: 56px;
   }
@@ -263,165 +235,10 @@
     margin-right: 0;
     margin-left: 0;
   }
-
-  .project-page--single-page-rating .project-page__panel {
-    margin-bottom: 43px;
-  }
-
-  .project-page--single-page-rating .project-page__budget {
-    padding-right: 40px;
-    padding-bottom: 8px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .project-page--single-page-rating .project-page__result {
-    padding-bottom: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-
-  .project-page--single-page-rating .project-page__result-info {
-    margin-left: 15px;
-  }
-
-  .project-page--single-page-rating .project-page__address {
-    padding-left: 16px;
-  }
-
-  .project-page--single-page-rating .project-page__files {
-    width: 100%;
-    column-count: 2;
-    padding: 0 15px;
-    margin: 0;
-    column-gap: 12px;
-    break-inside: avoid-column;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .project-page--single-page-rating .file-item {
-    max-width: calc(100% / 2 - 15px);
-    width: 100%;
-  }
-
-  .project-page--single-page-rating .file-item:not(:last-child) {
-    margin-bottom: 0;
-  }
-
-  .project-page--single-page-rating .project-page__back-btn {
-    margin-left: 15px;
-    max-width: 280px;
-  }
-
-  .project-page--single-page-rating .project-page__mobile-hidden {
-    display: block;
-  }
 }
 
 
 @include mobile {
-  .project-page--single-page-rating {
-    padding-top: 42px;
-  }
-
-  .project-page--single-page-rating .info-banner {
-    padding: 21px 40px 10px 31px;
-    margin-bottom: 33px;
-
-    svg {
-      top: 22px;
-      left: 22px;
-    }
-  }
-
-  .project-page--single-page-rating .info-banner__title {
-    margin-bottom: 0;
-    line-height: 23px;
-  }
-
-  .project-page--single-page-rating .info-banner__text {
-    padding-left: 32px;
-    font-size: 15px;
-    line-height: 20px;
-  }
-
-  .project-page--single-page-rating .content h1:not([class]) {
-    font-size: 24px;
-    line-height: 28px;
-  }
-
-  .project-page--single-page-rating .project-meta {
-    margin-bottom: 17px;
-  }
-
-  .project-page--single-page-rating .project-meta__category {
-    padding-left: 15px;
-    font-size: 16px;
-  }
-
-  .project-page--single-page-rating .project-meta__category-link {
-    margin-top: 10px;
-    margin-left: 0;
-  }
-
-  .project-page--single-page-rating .project-meta__category-link svg {
-    display: none;
-  }
-
-  .project-page--single-page-rating .project-page__budget {
-    padding-top: 21px;
-    padding-left: 16px;
-    padding-bottom: 19px;
-  }
-
-  .project-page--single-page-rating .project-page__contacts {
-    padding-top: 21px;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-bottom: 18px;
-  }
-
-  .project-page--single-page-rating .project-page__result {
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 21px;
-  }
-
-  .project-page--single-page-rating .project-page__result-button-wrap {
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 3px;
-  }
-
-  .project-page--single-page-rating .button-like--bordered {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    max-width: 100%;
-    margin-bottom: 8px;
-  }
-
-  .project-page--single-page-rating .project-page__result-info {
-    margin-left: 0;
-  }
-
-  .project-page--single-page-rating .content h2:not([class]) {
-    font-size: 24px;
-  }
-
-  .project-page--single-page-rating .file-item {
-    max-width: 100%;
-  }
-
-  .project-page--single-page-rating .project-page__back-btn {
-    max-width: 290px;
-    margin: 0 auto;
-  }
-
   .project-page__meta,
   .project-page__panel,
   .project-page__text,
@@ -545,9 +362,299 @@
   line-height: 22px;
   font-weight: 400;
   letter-spacing: 0;
-  color: $dark-text;
+  color: var(--color-text,  $dark-text);
 
   svg {
-    fill: $grey;
+    fill: var(--color-text,  $grey);
+  }
+}
+
+.project-page--single-page-rating {
+  .info-banner {
+    padding-bottom: 12px;
+  }
+
+  .project-meta__category-link {
+    margin-top: 0;
+    margin-left: 14px;
+  }
+
+  .project-meta__category-link svg {
+    display: block;
+  }
+
+
+  .project-meta__category {
+    border-bottom: none;
+  }
+
+  .content h2:not([class]) {
+    margin-bottom: 20px;
+  }
+
+  .project-page__files {
+    margin-top: 24px;
+  }
+
+  .project-page__gallery {
+    margin-top: 25px;
+    padding-bottom: 48px;
+    border-bottom: 1px solid $light-grey;
+  }
+
+  .project-page__text {
+    margin-bottom: 50px;
+  }
+
+  @include tablet {
+    .info-banner {
+      padding-left: 66px;
+    }
+
+    .info-banner__icon {
+      left: 29px;
+    }
+
+    .project-page__container {
+      margin-bottom: 40px;
+    }
+
+    .content h1:not([class]) {
+      margin-bottom: 44px;
+    }
+
+    .project-meta__category-link {
+      margin-left: 20px;
+    }
+
+    .project-vote__container {
+      padding: 24px 22px;
+    }
+
+    .project-vote__date:first-of-type {
+      margin-right: 30px;
+    }
+
+    .project-vote__expire {
+      margin-left: auto;
+      margin-right: 51px;
+      margin-top: 24px;
+    }
+
+    .project-meta {
+      margin-bottom: 39px;
+    }
+
+    .project-meta__category {
+      font-size: 18px;
+      padding-left: 21px;
+      padding-bottom: 15px;
+    }
+
+    .project-page__budget {
+      padding-right: 74px;
+      padding-bottom: 8px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .project-page__result-button-wrap {
+      margin-bottom: 0;
+    }
+
+    .project-page__panel {
+      margin-bottom: 43px;
+    }
+
+    .project-page__result {
+      padding-bottom: 24px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .project-page__result-info {
+      margin-left: 15px;
+    }
+
+    .project-page__address {
+      display: flex;
+      align-items: center;
+      padding-left: 23px;
+      margin-bottom: 0;
+    }
+
+    .project-page__address svg {
+      margin-right: 5px;
+    }
+
+    .content h2:not([class]) {
+      margin-bottom: 23px;
+    }
+
+    .project-page__files {
+      width: 100%;
+      column-count: 2;
+      padding: 0 24px;
+      margin: 0;
+      column-gap: 12px;
+      break-inside: avoid-column;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .file-item {
+      max-width: calc(100% / 2 - 30px);
+      width: 100%;
+    }
+
+    .file-item:not(:last-child) {
+      margin-bottom: 0;
+    }
+
+    .project-page__gallery {
+      padding-bottom: 40px;
+      margin-bottom: 40px;
+      border-bottom: none;
+
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 24px;
+        height: 1px;
+        width: 94vw;
+        background-color: $light-grey;
+      }
+    }
+
+    .project-page__back-btn {
+      margin-left: 24px;
+      max-width: 280px;
+    }
+
+    .project-page__mobile-hidden {
+      display: block;
+    }
+
+    .project-page__text {
+      margin-bottom: 40px;
+    }
+  }
+
+  @include mobile {
+    padding-top: 42px;
+
+    .info-banner {
+      padding: 21px 40px 10px 61px;
+      margin-bottom: 33px;
+
+      svg {
+        top: 22px;
+        left: 22px;
+      }
+    }
+
+    .info-banner__title {
+      margin-bottom: 0;
+      padding-left: 0;
+      line-height: 23px;
+    }
+
+    .info-banner__text {
+      font-size: 15px;
+      line-height: 20px;
+    }
+
+    .content h1:not([class]) {
+      margin-bottom: 25px;
+      font-size: 24px;
+      line-height: 28px;
+    }
+
+    .project-meta {
+      margin-bottom: 17px;
+    }
+
+    .project-meta__category {
+      padding-left: 15px;
+      font-size: 16px;
+    }
+
+    .project-meta__category-link {
+      margin-top: 10px;
+      margin-left: 0;
+    }
+
+    .project-meta__category-link svg {
+      display: none;
+    }
+
+    .project-page__budget {
+      padding-top: 21px;
+      padding-left: 16px;
+      padding-bottom: 19px;
+    }
+
+    .project-page__contacts {
+      padding-top: 21px;
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-bottom: 18px;
+    }
+
+    .project-page__result {
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-top: 21px;
+      padding-bottom: 15px;
+    }
+
+    .project-page__result-button-wrap {
+      flex-direction: column;
+      width: 100%;
+      margin-bottom: 3px;
+    }
+
+    .button-like--bordered {
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      max-width: 100%;
+      margin-bottom: 8px;
+    }
+
+    .project-page__result-info {
+      margin-left: 0;
+    }
+
+    .content h2:not([class]) {
+      margin-top: 35px;
+      margin-bottom: 18px;
+      font-size: 24px;
+    }
+
+    .project-page__address {
+      padding-left: 17px;
+    }
+
+    .project-page__files {
+      padding: 0 16px;
+    }
+
+    .file-item {
+      max-width: 100%;
+    }
+
+    .project-page__gallery {
+      margin-top: 18px;
+    }
+
+    .project-page__back-btn {
+      max-width: 290px;
+      margin: 0 auto;
+    }
   }
 }
