--- a/source/sass/blocks/your-projects-list.scss
+++ b/source/sass/blocks/your-projects-list.scss
@@ -30,7 +30,7 @@
 
   @media (max-width: $mobile-max-width) {
     &:first-child {
-      padding-top: 27px;
+      padding-top: 28px;
     }
   }
 }
@@ -51,7 +51,7 @@
   line-height: 28px;
   font-weight: 400;
   letter-spacing: 0;
-  color: $dark-text;
+  color: var(--color-text, $dark-text);
 
   @media (max-width: $mobile-max-width) {
     font-size: 18px;
@@ -85,7 +85,7 @@
   }
 
   @media (max-width: $mobile-max-width) {
-    padding: 29px 0;
+    padding: 30px 0;
     padding-bottom: 16px;
     line-height: 22px;
   }
