--- a/source/sass/blocks/status-info.scss
+++ b/source/sass/blocks/status-info.scss
@@ -18,7 +18,7 @@
 
 .status-info__text-group {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin-right: auto;
 
   svg {
