--- a/source/sass/blocks/button-like.scss
+++ b/source/sass/blocks/button-like.scss
@@ -11,7 +11,7 @@
     font-weight: 400;
     line-height: 17px;
     letter-spacing: 0;
-    color: $grey-lighter;
+    color: var(--color-text, $grey-lighter);
     margin-right: 8px;
     transition: color $style-change-duration;
   }
@@ -26,7 +26,7 @@
   }
 
   svg path.stroked {
-    fill: $grey-lighter;
+    fill: var(--color-text, $grey-lighter);
     transition: fill $style-change-duration;
   }
 
@@ -45,8 +45,8 @@
     max-width: calc(100% / 2 - 5px);
     width: 100%;
     margin-right: 0;
-    padding: 12px 43px 16px 43px;
-    border: 1px solid $light-grey;
+    padding: 12px 44px 16px 44px;
+    border: 1px solid var(--color-text, $grey-lighter);
     border-radius: 5px;
     transition: border-color $style-change-duration;
 
@@ -62,18 +62,18 @@
     }
 
     &.is-selected {
-      border-color: $blue-accent;
+      border-color: var(--color-interactive-default, $blue-accent);
     }
 
     &:hover,
     &:focus {
-      border-color: $blue-accent;
+      border-color: var(--color-interactive-default, $blue-accent);
     }
   }
 
   &.is-selected {
     span {
-      color: $blue-default;
+      color: var(--color-interactive-default, $blue-default);
     }
 
     svg .stroked {
@@ -81,7 +81,7 @@
     }
 
     svg .filled {
-      fill: $blue-default;
+      fill: var(--color-interactive-default, $blue-default);
     }
 
     &:hover,
@@ -91,7 +91,7 @@
       }
 
       svg .filled {
-        fill: $blue-accent;
+        fill: var(--color-interactive-default, $blue-accent);
       }
     }
   }
@@ -101,11 +101,11 @@
     outline: none;
 
     span {
-      color: $blue-accent;
+      color: var(--color-interactive-default, $blue-accent);
     }
 
     svg .stroked {
-      fill: $blue-accent;
+      fill: var(--color-interactive-default, $blue-accent);
     }
   }
 }
