исправляет баги из клиентского листа

--- a/source/sass/blocks/budjet.scss
+++ b/source/sass/blocks/budjet.scss
@@ -85,7 +85,7 @@
   font-size: rem(13px);
   line-height: 130%;
 
-  color: var(--color-interactive-default, $red);
+  color: $red;
 }
 
 .budjet__field-info {
