--- a/source/sass/blocks/rating-list.scss
+++ b/source/sass/blocks/rating-list.scss
@@ -118,5 +118,5 @@
   font-weight: 400;
   line-height: 20px;
   letter-spacing: 0;
-  color: $blue-default;
+  color: var(--color-text, $blue-default);
 }
