--- a/source/sass/blocks/project-page.scss
+++ b/source/sass/blocks/project-page.scss
@@ -397,6 +397,15 @@
     border-bottom: none;
   }
 
+  .project-vote__expire {
+    margin-top: 17px;
+  }
+
+  .project-vote__date {
+    padding-right: 25px;
+    margin-right: auto;
+  }
+
   .content h2:not([class]) {
     margin-bottom: 20px;
   }
@@ -409,19 +418,25 @@
     margin-top: 25px;
     padding-bottom: 48px;
     border-bottom: 1px solid var(--color-stroke, $light-grey);
-
-    &::before {
-      display: none;
-    }
   }
 
   .project-page__text {
     margin-bottom: 50px;
   }
 
+  .project-page__rejected-info {
+    max-width: 274px;
+
+    margin-top: -13px;
+    margin-bottom: 43px;
+  }
+
   @include tablet {
-    .info-banner {
+    .info-banner,
+    .info-banner--approved {
       padding-left: 66px;
+      margin-left: 0;
+      margin-top: 0;
     }
 
     .info-banner__icon {
@@ -449,7 +464,6 @@
     }
 
     .project-vote__expire {
-      margin-left: auto;
       margin-right: 0;
       margin-top: 24px;
     }
@@ -538,9 +552,11 @@
         position: absolute;
         bottom: 0;
         left: 24px;
+        right: 0;
+        width: 100%;
         height: 1px;
-        width: 94vw;
         background-color: var(--color-stroke, $light-grey);
+        max-width: calc(100vw - 48px);
       }
     }
 
@@ -548,16 +564,6 @@
       position: relative;
       margin-left: 24px;
       max-width: 280px;
-
-      &::before {
-        position: absolute;
-        content: "";
-        top: -40px;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background-color: var(--color-stroke, $light-grey);
-      }
     }
 
     .project-page__mobile-hidden {
@@ -566,6 +572,10 @@
 
     .project-page__text {
       margin-bottom: 40px;
+    }
+
+    .project-page__rejected-info {
+      margin-left: 24px;
     }
   }
 
@@ -677,13 +687,26 @@
       margin-top: 18px;
 
       &::before {
-        width: 84vw;
+        left: 16px;
+        max-width: calc(100vw - 32px);
       }
     }
 
     .project-page__back-btn {
       max-width: 290px;
       margin: 0 auto;
+    }
+
+    .project-page__rejected-info {
+      margin-left: 16px;
+      margin-top: 0;
+    }
+  }
+
+  @media (max-width: $mobile-max-width) {
+    .project-vote__date {
+      padding-right: 0;
+      margin-right: 0;
     }
   }
 }
